syntax = "proto3";

package confirm;

option go_package = "github.com/Doremi203/couply/backend/auth/api/phoneconfirm";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service PhoneConfirmation {
  rpc SendCodeV1(SendCodeV1Request) returns (SendCodeV1Response) {
    option (google.api.http) = {
      post: "/v1/phone/send-code"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Иницирует отправку sms-кода для подтверждения номера телефона";
      description: "Иницирует отправку sms-кода для подтверждения номера телефона и привязки его к аккаунту";
      parameters: {
        headers: {
          name: "User-Token"
          description: "Токен пользователя полученный в /login"
          type: STRING
          required: true
        }
      }
    };
  }

  rpc ConfirmV1(ConfirmV1Request) returns (ConfirmV1Response) {
    option (google.api.http) = {
      post: "/v1/phone/confirm"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Проверка кода и подтверждение номера телефона";
      description: "Проверяет, что переданный код совпадает с отправленным и, в случае успеха, привязывает номер телефона к аккаунту";
      parameters: {
        headers: {
          name: "User-Token"
          description: "Токен пользователя полученный в /login"
          type: STRING
          required: true
        }
      }
    };
  }
}

message SendCodeV1Request {
  string phone = 1;
}

message SendCodeV1Response {
  int32 send_again_in = 1;
}

message ConfirmV1Request {
  string phone = 1;
  string code = 2;
}

message ConfirmV1Response {}